Measure code coverage

--- a/package.json
+++ b/package.json
@@ -40,11 +40,13 @@
     "@babel/register": "^7.9.0",
     "@babel/runtime": "^7.9.2",
     "@codexteam/shortcuts": "^1.1.1",
+    "@cypress/code-coverage": "^3.8.3",
     "@types/webpack": "^4.41.12",
     "@types/webpack-env": "^1.15.2",
     "babel-loader": "^8.1.0",
     "babel-plugin-add-module-exports": "^1.0.0",
     "babel-plugin-class-display-name": "^2.1.0",
+    "babel-plugin-istanbul": "^6.0.0",
     "core-js": "3.6.5",
     "css-loader": "^3.5.3",
     "cssnano": "^4.1.10",
