--- a/.babelrc
+++ b/.babelrc
@@ -9,6 +9,7 @@
   "plugins": [
     "babel-plugin-add-module-exports",
     "babel-plugin-class-display-name",
-    "@babel/plugin-transform-runtime"
+    "@babel/plugin-transform-runtime",
+    "istanbul"
   ]
 }
